--- a/roles/gateway_common/tasks/stop_gateway.yml
+++ b/roles/gateway_common/tasks/stop_gateway.yml
@@ -6,7 +6,7 @@
   register: status
   changed_when: status.rc == 0
 
-- name: checking to see if gateway pid does not exist anymore after stopping Gateway application
+- name: checking to see if gateway pid does not exist anymore after stopping Gateway application # noqa 305 must use shell
   shell: pgrep -f "Gateway.jar"
   register: gateway_pid_after
   failed_when: 'gateway_pid_after.rc >= 2 or gateway_pid_after.stdout'
