--- a/roles/gateway_configure_hsm_luna/tasks/main.yml
+++ b/roles/gateway_configure_hsm_luna/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+
+- import_tasks: check_valid_input.yml
+
 - import_tasks: pip_install_online.yml
 
 # Uncomment this line if there is no internet available on your gateway appliance and comment the last line out
@@ -8,8 +11,6 @@
 
 # Uncomment this line if there is no internet available on your gateway appliance and comment the last line out
 #- import_tasks: sshpass_install_locally.yml
-
-- import_tasks: check_valid_input.yml
 
 - name: Create a directory and make it as Luna7 home directory
   file:
@@ -35,6 +36,7 @@
     chdir: /home/ssgconfig/hsm/LunaClient_7.2.0-220_Linux/64
     cmd: (echo y) | sh install.sh -p sa -c jsp -c jcprov
   ignore_errors: yes
+  changed_when: luna.rc == 0
 
 - name: Check if luna client already installed
   fail:
@@ -62,6 +64,7 @@
     chdir: /usr/safenet/lunaclient/bin
     cmd: ./vtl addServer -n {{ hsm_hostname }} -c server.pem
   ignore_errors: yes
+  changed_when: regser.rc == 0
 
 - name: Check if the Luna server already registered
   fail:
@@ -72,6 +75,8 @@
   command:
     chdir: /usr/safenet/lunaclient/bin
     cmd: ./vtl createCert -n {{ inventory_hostname }}
+  register: status
+  changed_when: status.rc == 0
 
 - name: Copy the client certificate to the server
   expect:
@@ -82,8 +87,11 @@
 
 - name: Log in to the Luna HSM appliance and register the client
   register: clientreg
-  command: sshpass -p '{{ hsm_password }}' ssh {{ ansible_ssh_extra_args }} {{ hsm_usr }}@{{ hsm_hostname }} client register -client {{ inventory_hostname }} -hostname {{ inventory_hostname }}
+  command: >
+    sshpass -p '{{ hsm_password }}' ssh {{ ansible_ssh_extra_args }} {{ hsm_usr }}@{{ hsm_hostname }}
+    client register -client {{ inventory_hostname }} -hostname {{ inventory_hostname }}
   ignore_errors: yes
+  changed_when: clientreg.rc == 0
 
 - name: Check if client already been registered
   fail:
@@ -94,8 +102,11 @@
 
 - name: Assign the client to a server partition
   register: partexist
-  command: sshpass -p '{{ hsm_password }}' ssh {{ ansible_ssh_extra_args }} {{ hsm_usr }}@{{ hsm_hostname }} client assignPartition -client {{ inventory_hostname }} -partition {{ partition_nm }}
+  command: >
+    sshpass -p '{{ hsm_password }}' ssh {{ ansible_ssh_extra_args }} {{ hsm_usr }}@{{ hsm_hostname }}
+    client assignPartition -client {{ inventory_hostname }} -partition {{ partition_nm }}
   ignore_errors: yes
+  changed_when: partexist.rc == 0
 
 - name: Check if the input partition exists
   fail:
@@ -135,7 +146,9 @@
 
 - name: Set the file permissions for the Luna client
   command:
-    cmd: chmod -R 655 /usr/safenet
+    cmd: chmod -R 655 /usr/safenet # noqa 302
+  register: status
+  changed_when: status.rc == 0
 
 - name: Copy the Luna* .JAR files over to the Gateway
   copy:
@@ -152,7 +165,9 @@
     remote_src: yes
 
 - name: Set the file permissions for the JDK library as follows
-  shell: chmod a+r /opt/SecureSpan/JDK/jre/lib/ext/*Luna*
+  shell: chmod a+r /opt/SecureSpan/JDK/jre/lib/ext/*Luna*  # noqa 302
+  register: status
+  changed_when: status.rc == 0
 
 - name: Modify the security file
   blockinfile:
@@ -164,15 +179,23 @@
       com.safenetinc.luna.provider.createExtractableSecretKeys=true
 
 - name: Set the read permissions for the certificate files in the server cert directories
-  shell: chmod a+r /usr/safenet/lunaclient/cert/server/*.pem
+  shell: chmod a+r /usr/safenet/lunaclient/cert/server/*.pem  # noqa 302
+  register: status
+  changed_when: status.rc == 0
 
 - name: Set the read permissions for the certificate files in the client cert directories
-  shell: chmod a+r /usr/safenet/lunaclient/cert/client/*.pem
+  shell: chmod a+r /usr/safenet/lunaclient/cert/client/*.pem  # noqa 302
+  register: status
+  changed_when: status.rc == 0
 
 - name: Add the ‘Gateway’ user to the hsmusers group
   command: gpasswd --add gateway hsmusers
+  register: status
+  changed_when: status.rc == 0
 
-- name: Restart the Gateway
+- name: Restart the Gateway # noqa 303
   command: service ssg restart
+  register: status
+  changed_when: status.rc == 0
 
 
