--- a/roles/gateway_configure_hsm_luna/tasks/pip_install_online.yml
+++ b/roles/gateway_configure_hsm_luna/tasks/pip_install_online.yml
@@ -1,13 +1,20 @@
 ---
-- name: Download pip
+- name: Download pip # noqa 303
   command: curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+  register: status
+  changed_when: status.rc == 0
 
 - name: Install pip
   command: python get-pip.py
+  register: status
+  changed_when: status.rc == 0
 
 - name: Install pexpect
   command: pip install pexpect
+  register: status
+  changed_when: status.rc == 0
 
 - name: Checking that pexpect is usable
   shell:
     cmd: (echo import pexpect;) | /usr/bin/python
+  changed_when: False
