--- a/roles/gateway_export_database/meta/main.yml
+++ b/roles/gateway_export_database/meta/main.yml
@@ -1,13 +1,13 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: CA API Management
+  description: This role is used to export the Gateway database contents. See the role README file for more details.
+  company: CA API Management
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
   # issue_tracker_url: http://example.com/issue/tracker
 
-  license: MIT 
+  license: MIT
 
   min_ansible_version: 2.9.4
 
@@ -28,17 +28,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+  platforms:
+  - name: GenericLinux
+    versions:
+    - all
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
