--- a/roles/gateway_papim_restore_backup/tasks/main.yml
+++ b/roles/gateway_papim_restore_backup/tasks/main.yml
@@ -4,11 +4,11 @@
 # This task will restore PAPIM configuration files
 
 - name: Check requirement that the PAPIM backup file exists on the controller.
-  local_action:
+  local_action: # noqa 504
     module: stat
     path: "{{ controller_dir_papim_backup_location }}/ansible_papim_ssgbackup_{{ hostvars[inventory_hostname].upgrade_source }}.zip"
   register: file_status
-  failed_when: file_status.stat.exists == False
+  failed_when: not file_status.stat.exists
 
 - name: Set the backup filename to a fact.
   set_fact:
@@ -123,9 +123,8 @@
   file:
     state: absent
     path: "/opt/{{ fact_backup_file }}"
-  
+
 - name: Delete /tmp/papimrestore folder.
   file:
     state: absent
     path: "{{ temp_folder }}"
-     
