--- a/inventories/sample/group_vars/gateway.yml
+++ b/inventories/sample/group_vars/gateway.yml
@@ -15,8 +15,8 @@
     ### Node configurations, unused properties should be commented out
     #database_failover_host:  # Database Failover Hostname
     #database_failover_port: 3306  # Database Failover Port
-    admin_user: admin  # CA API Gateway Policy Manager Username (not required if joining an existing cluster)
-    admin_pass: "{{ vault_gateway_admin_pass }}" # CA API Gateway Policy Manager Password (not required if joining an existing cluster)
+    policy_manager_admin_user: admin  # CA API Gateway Policy Manager Username (not required if joining an existing cluster)
+    policy_manager_admin_pass: "{{ vault_policy_manager_admin_pass }}" # CA API Gateway Policy Manager Password (not required if joining an existing cluster)
     node_enable: true  # Node Enabled State
     configure_node: true  # Configure the node_properties
     cluster_host: "{{ hostvars[groups['gateway_primary_db'][0]]['dest'] }}" # Cluster Host (not required if joining an existing cluster)
