TA1415061 separate password into valut file. Combine into all.yaml

--- a/roles/gateway_import_database/tasks/main.yml
+++ b/roles/gateway_import_database/tasks/main.yml
@@ -10,7 +10,7 @@
 - name: Delete gateway database # noqa 305 must use shell
   no_log: true # don't log decrypted passwords in responses
   shell:
-    cmd: mysqladmin -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} drop {{ ssgdb_name }} -f
+    cmd: mysqladmin -u {{ database_user }} -p{{ database_pass }} drop {{ database_name }} -f
   failed_when: false
   register: status
   changed_when: status.rc == 0
@@ -18,21 +18,21 @@
 - name: create gateway database # noqa 305 must use shell
   no_log: true # don't log decrypted passwords in responses
   shell:
-    cmd: mysqladmin -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} create {{ ssgdb_name }}
+    cmd: mysqladmin -u {{ database_user }} -p{{ database_pass }} create {{ database_name }}
   register: status
   changed_when: status.rc == 0
 
 - name: import gateway database from source gateway # noqa 305 must use shell
   no_log: true # don't log decrypted passwords in responses
   shell:
-    cmd: mysql  -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} {{ ssgdb_name }} < {{ remote_db_temp_dir }}/ssg.sql
+    cmd: mysql  -u {{ database_user }} -p{{ database_pass }} {{ database_name }} < {{ remote_db_temp_dir }}/ssg.sql
   register: status
   changed_when: status.rc == 0
 
 - name: clean up cluster_info table # noqa 305 must use shell
   no_log: true
   shell:
-    cmd: mysql  -u {{ ssgdb_user }} -p{{ ssgdb_userpwd }} -e 'truncate table ssg.cluster_info'
+    cmd: mysql  -u {{ database_user }} -p{{ database_pass }} -e 'truncate table ssg.cluster_info'
   register: status
   changed_when: status.rc == 0
 
@@ -42,30 +42,30 @@
     - name: create otk user if not exists # noqa 305 must use shell
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysql -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} -e "{{ command_mysql_create_otkuser }}"
+        cmd: mysql -u {{ database_admin_user }} -p{{ database_admin_passpwd }} -e "{{ command_mysql_create_otkuser }}"
 
     - name: grant otk user privileges # noqa 305 must use shell
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysql -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} -e "{{ command_mysql_grant_otkuser_privileges }}"
+        cmd: mysql -u {{ database_admin_user }} -p{{ database_admin_pass }} -e "{{ command_mysql_grant_otkuser_privileges }}"
 
     - name: delete otk database # noqa 305 must use shell
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysqladmin  -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} drop {{ otkdb_name }} -f
+        cmd: mysqladmin  -u {{ database_admin_user }} -p{{ database_admin_pass }} drop {{ otkdb_name }} -f
       failed_when: false
 
     - name: create otk database # noqa 305 must use shell
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysqladmin -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} create {{ otkdb_name }}
+        cmd: mysqladmin -u {{ database_admin_user }} -p{{ database_admin_pass }} create {{ otkdb_name }}
       register: status
       changed_when: status.rc == 0
 
     - name: import otk database
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysql -u {{ ssgdb_adminuser }} -p{{ ssgdb_adminpwd }} {{ otkdb_name }} < {{ remote_db_temp_dir }}/otk.sql
+        cmd: mysql -u {{ database_admin_user }} -p{{ database_admin_pass }} {{ otkdb_name }} < {{ remote_db_temp_dir }}/otk.sql
 
 - name: clean up remote temp directory
   file:
