--- a/roles/gateway_export_database/tasks/main.yml
+++ b/roles/gateway_export_database/tasks/main.yml
@@ -16,7 +16,7 @@
 - name: Dump gateway source database # noqa 305 must use shell
   no_log: true # don't log decrypted passwords in responses
   shell:
-    cmd: mysqldump {{ ssgdb_name }} --routines -u{{ ssgdb_user }}  -p{{ ssgdb_userpwd }} > {{ remote_db_temp_dir }}/ssg.sql
+    cmd: mysqldump {{ database_name }} --routines -u{{ database_user }}  -p{{ database_pass }} > {{ remote_db_temp_dir }}/ssg.sql
   register: status
   changed_when: status.rc == 0
 
@@ -35,7 +35,7 @@
     - name: Dump otk source database # noqa 305 must use shell
       no_log: true # don't log decrypted passwords in responses
       shell:
-        cmd: mysqldump {{ otkdb_name }} --routines -u{{ ssgdb_adminuser }}  -p{{ ssgdb_adminpwd }} > {{ remote_db_temp_dir }}/otk.sql
+        cmd: mysqldump {{ otkdb_name }} --routines -u{{ database_admin_user }}  -p{{ database_admin_pass }} > {{ remote_db_temp_dir }}/otk.sql
 
     - name: remove string from otk DB dump to comply with MySQL8 # noqa 305 must use shell
       shell:
