--- a/roles/gateway_export_database/vars/main.yml
+++ b/roles/gateway_export_database/vars/main.yml
@@ -2,5 +2,5 @@
 # vars file for gateway_export_database
 notes: "Run by Ansible!"
 ## Role specific password can be added here
-#ssgdb_adminpwd:
-#ssgdb_userpwd:
+#database_admin_pass:
+#database_pass:
