--- a/playbooks/gateway-database-export.yml
+++ b/playbooks/gateway-database-export.yml
@@ -3,6 +3,6 @@
 - name: Execute mysql dump and store
   hosts: gateway_mysql_source
   serial: 1
-  strategy: debug
+  strategy: free
   roles:
     - gateway_export_database
