--- a/playbooks/gateway-database-import.yml
+++ b/playbooks/gateway-database-import.yml
@@ -3,7 +3,7 @@
 - name: Execute mysql import in destination gateway
   hosts: gateway_mysql_dest
   serial: 1
-  strategy: debug
+  strategy: free
   pre_tasks:
     - name: Stop the Gateway application
       import_role:
