--- a/roles/gateway_basic_backup/tasks/main.yml
+++ b/roles/gateway_basic_backup/tasks/main.yml
@@ -3,7 +3,7 @@
 #
 # This task will backup Gateway and Linux configuration files and Gateway assertions using ssgbackup. No database files will
 # be backed up. It will rename the backup file to a standardized format: ansible_basic_ssgbackup_<hostname>.zip and copy the file to
-# the controller in a location specified by the group_vars variable "controller_dir_backup_location". The file can then be copied
+# the controller in a location specified by the variable "controller_dir_backup_location". The file can then be copied
 # to a target server and restored using a different role.
 
 
