Fix linter issues

--- a/roles/gateway_update_otk_conf/tasks/update_jdbc_connection.yml
+++ b/roles/gateway_update_otk_conf/tasks/update_jdbc_connection.yml
@@ -2,7 +2,7 @@
 # This task will update all OTK JDBC connection urls (containing the OTK db name) to use the configured new hostname.
 # URLs are only updated if both variables in the `when` clause below are set to non-empty strings.
 
-- name: Update hostnames in OTK JDBC connections
+- name: Update hostnames in OTK JDBC connections # noqa 305 must use shell
   when: old_otk_jdbc_hostname and new_otk_jdbc_hostname
   no_log: true # don't log decrypted passwords in responses
   shell:
