--- a/roles/gateway_update_otk_conf/tasks/update_callback.yml
+++ b/roles/gateway_update_otk_conf/tasks/update_callback.yml
@@ -2,7 +2,7 @@
 # This task will update all OTK callback urls (containing the old hostname) to use the new hostname.
 # URLs are only updated if both variables in the `when` clause below are set to non-empty strings.
 
-- name: Update OTK callback urls containing [{{ old_callback_hostname }}] to [{{ new_callback_hostname }}]
+- name: Update OTK callback urls containing [{{ old_callback_hostname }}] to [{{ new_callback_hostname }}] # noqa 305 must use shell
   when: old_callback_hostname and new_callback_hostname
   no_log: true # don't log decrypted passwords in responses
   shell:
