TA1413782 update the readme file and correct file name

--- a/roles/gateway_preupgrade_analyzer/tasks/external_libs.yml
+++ b/roles/gateway_preupgrade_analyzer/tasks/external_libs.yml
@@ -1,5 +1,5 @@
 ---
-# This task report external libraries installed on the gateway.=
+# This task report external libraries installed on the gateway.
 - name: List external libraries
   find:
     paths: "{{ gateway_external_libs_dir }}"
