--- a/roles/gateway_preupgrade_analyzer/vars/main.yml
+++ b/roles/gateway_preupgrade_analyzer/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-# vars file for pre-upgrade-analyzer
+# vars file for preupgrade-analyzer
 remote_report_temp_dir: '/tmp/report'
 gateway_modular_assertions_dir: '/opt/SecureSpan/Gateway/runtime/modules/assertions'
 gateway_custom_assertions_dir: '/opt/SecureSpan/Gateway/runtime/modules/lib'
