--- a/roles/gateway_update_otk_hostnames/tasks/update_jdbc_connection.yml
+++ b/roles/gateway_update_otk_hostnames/tasks/update_jdbc_connection.yml
@@ -6,6 +6,10 @@
   when: old_otk_jdbc_hostname and new_otk_jdbc_hostname
   no_log: true # don't log decrypted passwords in responses
   shell:
-    cmd: mysql -u{{ db_user }} -p{{ db_pass }} {{ db_name }} -e "{{ sql_update_jdbc_urls }}"
+    cmd: >
+      mysql -u{{ db_user }} -p{{ db_pass }} {{ db_name }} -e
+      "UPDATE jdbc_connection
+      SET jdbc_url = REPLACE(jdbc_url, '{{ old_otk_jdbc_hostname }}', '{{ new_otk_jdbc_hostname }}')
+      WHERE (jdbc_url like '%{{ otkdb_name }}%');"
   register: status
   changed_when: status.rc == 0
