--- a/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
+++ b/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
@@ -11,7 +11,7 @@
 
 - name: upgrading Gateway Database Schema after import database
   no_log: true # don't log decrypted passwords in responses
-  when:  '"Database upgrade not required" not in update.stdout'
+  when:  '"Database upgrade is required" in update.stdout'
   expect:
     command: >
       sshpass -p '{{ ansible_password }}' ssh ssgconfig@{{ inventory_hostname }}
