--- a/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
+++ b/roles/gateway_import_database/tasks/upgrade_gateway_database_schema.yml
@@ -1,12 +1,21 @@
 ---
 # This task upgrade the gateway database version.
 
+- name: Check if Gateway Database Schema needs update # noqa 305 - no alternative to shell
+  no_log: true # don't log decrypted passwords in responses
+  shell:
+    cmd: sshpass -p '{{ ansible_password }}' ssh ssgconfig@{{ inventory_hostname }} '{{ script_db_schema_upgrade }}'
+  register: update
+  changed_when: false
+  delegate_to: localhost
+
 - name: upgrading Gateway Database Schema after import database
   no_log: true # don't log decrypted passwords in responses
+  when:  '"Database upgrade is required" in update.stdout'
   expect:
     command: >
       sshpass -p '{{ ansible_password }}' ssh ssgconfig@{{ inventory_hostname }}
-      'sudo -u layer7 /opt/SecureSpan/Appliance/libexec/ssgconfig_launch -databaseUgrade'
+      '{{ script_db_schema_upgrade }}'
     responses:
       "Perform upgrade?": "y"
       "Enter Administrative Database Username": "{{ database_admin_user }}"
