Remove template value and populate from custome input. Move vars around to be better organized

--- a/roles/gateway_processing_node/files/gateway_node.properties
+++ b/roles/gateway_processing_node/files/gateway_node.properties
@@ -8,30 +8,30 @@ cluster.host=
 
 ### Database Connection ###
 ## Creates the database
-configure.db=true
+configure.db=
 ## The database type, either 'mysql' or 'embedded'
-database.type=mysql
+database.type=
 ## Database Hostname
-database.host=localhost
+database.host=
 ## Database Port
-database.port=3306
+database.port=
 ## Database Name
-database.name=ssg
+database.name=
 ## Database Username
-database.user=gateway
+database.user=
 ## Database Password
 #database.pass=
 ## Administrative Database Username (not required if joining an existing cluster)
-database.admin.user=root
+database.admin.user=
 ## Administrative Database Password (not required if joining an existing cluster)
 #database.admin.pass=
 
 
 ### Node Configuration ###
 ## Node Enabled State
-node.enable=true
+node.enable=
 ## Configure the node.properties
-configure.node=true
+configure.node=
 
 ### Layer7 API Gateway Policy Manager Administrative Account ###
 ## Layer7 API Gateway Policy Manager Username (not required if joining an existing cluster)
