--- a/roles/gateway_processing_node/tasks/main.yml
+++ b/roles/gateway_processing_node/tasks/main.yml
@@ -33,9 +33,16 @@
         - { from: '^cluster.host', to: 'cluster.host={{ cluster_host }}' }
         - { from: '^#cluster.pass', to: 'cluster.pass={{ cluster_pass }}' }
         - { from: '^configure.db', to: 'configure.db={{ configure_db|lower }}' }
+        - { from: '^database.type', to: 'database.type={{ database_type }}' }
         - { from: '^database.host', to: 'database.host={{ database_host }}' }
+        - { from: '^database.name', to: 'database.name={{ database_name }}' }
+        - { from: '^database.port', to: 'database.port={{ database_port }}' }
+        - { from: '^database.user', to: 'database.user={{ database_user }}' }
         - { from: '^#database.pass', to: 'database.pass={{ database_pass }}' }
+        - { from: '^database.admin.user', to: 'database.admin.user={{ database_admin_user }}' }
         - { from: '^#database.admin.pass', to: 'database.admin.pass={{ database_admin_pass }}' }
+        - { from: '^node.enable', to: 'node.enable={{ node_enable }}' }
+        - { from: '^configure.node', to: 'configure.node={{ configure_node }}' }
       register: updated_node_properties
     - name: Auto-provision the new Gateway node.
       no_log: true # don't log decrypted passwords
