--- a/roles/gateway_processing_node/files/gateway_node.properties
+++ b/roles/gateway_processing_node/files/gateway_node.properties
@@ -43,5 +43,5 @@ configure.node=
 ## Database Failover Hostname
 #database.failover.host=
 ## Database Failover Port
-#database.failover.port=3306
+#database.failover.port=
 
