add papim parent group

--- a/inventories/sample/hosts.yml
+++ b/inventories/sample/hosts.yml
@@ -17,13 +17,15 @@ all:
         gateway_processing_node:
           hosts:
             target-processing-gw.placeholder.com:
-                src: source-processing-gw.placeholder.com
+              src: source-processing-gw.placeholder.com
         gateway_hsm:
           hosts:
-        gateway_papim_source:
-          hosts:
-        gateway_papim_install:
-          hosts:
+        gateway_papim:
+          chilren:
+            gateway_papim_source:
+              hosts:
+            gateway_papim_install:
+              hosts:
     hsm:
       children:
         hsm_luna7:
