Use template file for autoprovision roles (#16)
* Use template file instead of generate it on gateway.
* Add cleanup after provisioning

--- a/roles/gateway_processing_node/tasks/main.yml
+++ b/roles/gateway_processing_node/tasks/main.yml
@@ -7,22 +7,18 @@
   changed_when: false
   failed_when: false
 
-- name: Retrieve node properties template from source gateway, update properties, and use it to auto-provision destination Gateway.
+- name: Populate node properties template and use it to auto-provision destination Gateway.
   when: configured.rc != 0 # node is not configured yet
   block:
-    - name: Retrieve the Gateway node properties template file. # noqa 305 - no alternative to shell module
-      no_log: true # don't log decrypted passwords
-      shell:
-        cmd: sshpass -p '{{ gateway_ssgconfig_password }}' {{ command_ssh_source_gateway }} {{ command_retrieve_props }}
-      register: template_content
-    - name: Create temporary directory to store node properties template files.
+    - name: Create temporary directory to store node properties template file.
       tempfile:
         state: directory
         prefix: "{{ node_props_dir }}"
       register: temp_dir
-    - name: Save template text to local file.
+    - name: Copy template file to temporary directory.
+      delegate_to: localhost
       copy:
-        content: "{{ '\r\n'.join(template_content.stdout_lines[2:]) }}" # Ignore first 2 lines of stdout
+        src: gateway_node.properties
         dest: "{{ temp_dir.path }}/{{ inventory_hostname }}.properties"
       register: template_file
     - name: Set values in node properties template file.
@@ -37,9 +33,16 @@
         - { from: '^cluster.host', to: 'cluster.host={{ cluster_host }}' }
         - { from: '^#cluster.pass', to: 'cluster.pass={{ cluster_pass }}' }
         - { from: '^configure.db', to: 'configure.db={{ configure_db|lower }}' }
+        - { from: '^database.type', to: 'database.type={{ database_type }}' }
         - { from: '^database.host', to: 'database.host={{ database_host }}' }
+        - { from: '^database.name', to: 'database.name={{ database_name }}' }
+        - { from: '^database.port', to: 'database.port={{ database_port }}' }
+        - { from: '^database.user', to: 'database.user={{ database_user }}' }
         - { from: '^#database.pass', to: 'database.pass={{ database_pass }}' }
+        - { from: '^database.admin.user', to: 'database.admin.user={{ database_admin_user }}' }
         - { from: '^#database.admin.pass', to: 'database.admin.pass={{ database_admin_pass }}' }
+        - { from: '^node.enable', to: 'node.enable={{ node_enable }}' }
+        - { from: '^configure.node', to: 'configure.node={{ configure_node }}' }
       register: updated_node_properties
     - name: Auto-provision the new Gateway node.
       no_log: true # don't log decrypted passwords
@@ -47,3 +50,7 @@
         cmd: cat {{ template_file.dest }} | sshpass -p '{{ gateway_ssgconfig_password }}' {{ command_ssh_dest_gateway }} '{{ command_autoprovision_node }}'
       register: status
       failed_when: "'Configuration Successful' not in status.stdout"
+    - name: Clean node properties temporary directory
+      file:
+        state: absent
+        path: "{{ temp_dir.path }}/"
