update replication role/playbook with new inventory format

--- a/playbooks/gateway-database-replication.yml
+++ b/playbooks/gateway-database-replication.yml
@@ -1,5 +1,5 @@
 ---
 - name: Replicate Gateway MySQL 8 Database
-  hosts: gateway_primary_db
+  hosts: gateway_mysql
   roles:
     - gateway_replicate_database
