--- a/playbooks/gateway-database-import.yml
+++ b/playbooks/gateway-database-import.yml
@@ -1,5 +1,7 @@
 ---
-# Runs mysql to get gateway and OTK database import against all the hosts
+# This playbook will import the database dump from gateway_export_database role and import it into Gateway's MySQL database.
+# See the readme under roles/gateway_import_database for setup instructions.
+
 - name: Execute mysql import in destination gateway
   hosts: gateway_primary_db
   serial: 1
