--- a/playbooks/gateway-database-replication.yml
+++ b/playbooks/gateway-database-replication.yml
@@ -1,4 +1,7 @@
 ---
+# This playbook will setup the Gateway's MySQL database replication.
+# See the readme under roles/gateway_replicate_database for setup instructions.
+
 - name: Replicate Gateway MySQL 8 Database
   hosts: gateway_mysql
   roles:
