--- a/playbooks/gateway-restore-papim-backup.yml
+++ b/playbooks/gateway-restore-papim-backup.yml
@@ -1,4 +1,7 @@
 ---
+# This playbook will restore the PAPIM configurations backed up by the gateway_papim_backup role.
+# See the readme under roles/gateway_papim_restore_backup for setup instructions.
+
 - hosts: gateway_papim_dest
   gather_facts: no
   become: true
