--- a/playbooks/gateway-update-otk-hostnames.yml
+++ b/playbooks/gateway-update-otk-hostnames.yml
@@ -1,5 +1,6 @@
 ---
-# This playbook runs the gateway_update_otk_hostnames role. See the role README file for instructions.
+# This playbook updates hostnames used by OTK, for upgrade scenarios where hostnames are changed.
+# See the readme under roles/gateway_update_otk_hostnames for setup instructions.
 
 - name: Update hostnames used by OTK after expedited upgrade involving hostname changes.
   hosts: gateway_primary_db
