--- a/playbooks/gateway-update-passwords.yml
+++ b/playbooks/gateway-update-passwords.yml
@@ -1,3 +1,7 @@
+---
+# This playbook updates Gateway OS passwords.
+# See the readme under roles/gateway_common for setup instructions
+
 - hosts: gateway
   connection: local
   roles:
